[tool.poetry]
name = "document-extracter"
version = "0.1.0"
description = ""
authors = ["marykorol98 <mashak.1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# TODO: delete deprecated
python = "^3.12"
langchain = "^1.1.0"
uvicorn = "^0.38.0"
fastapi = "^0.122.0"
langchain-huggingface = "^1.1.0"
langchain-chroma = "^1.0.0"
sentence-transformers = "^5.1.2"
rank-bm25 = "^0.2.2"
ftfy = "^6.3.1" # доп очистка


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
