[tool.poetry]
name = "document-extracter"
version = "0.1.0"
description = ""
authors = ["marykorol98 <mashak.1998@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^1.1.0"
uvicorn = "^0.38.0"
fastapi = "^0.122.0"
langchain-huggingface = "^1.1.0"
langchain-chroma = "^1.0.0"
sentence-transformers = "^5.1.2"
ftfy = "^6.3.1" # доп очистка
scipy = { version = "^1.16.3", python = "*" }
langchain-classic = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
